Fix code format error on small screens
See https://stackoverflow.com/questions/3226001/some-font-sizes-rendered-larger-on-safari-iphone

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -192,7 +192,7 @@ p.intro {
   width: 640px;
 }
 
-@media screen and (max-width:825px) {
+@media screen and (max-width: 825px) {
   #triangles {
     width: 100%;
   }
@@ -200,5 +200,11 @@ p.intro {
   #container {
     width: auto;
     max-width: 100%;
+  }
+}
+
+@media screen and (max-device-width: 480px) {
+  body {
+    -webkit-text-size-adjust: none;
   }
 }
